5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1885_3123.log
== TEST (2019-07-09 10:48:36) 
-- CODE:
from numpy import*
x = array(eval(input("Entrada:"))) #x[0] x[1]
i = 0
while(i > 0):
	i = i -1
	m = (((v[0]**-1) + (v[1]**-1) + (v[2]**-1) + (v[i-1]**-1))/2)
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:49:29) 
-- CODE:
from numpy import*
x = array(eval(input("Entrada:"))) #x[0] x[1]
i = 0
m = (((v[0]**-1) + (v[1]**-1) + (v[2]**-1) + (v[i-1]**-1))/2)
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:49:39) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:"))) #x[0] x[1]
i = 0
m = (((v[0]**-1) + (v[1]**-1) + (v[2]**-1) + (v[i-1]**-1))/2)
print(m)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:12) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:"))) #x[0] x[1]
i = 0
m = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
print(m)	
-- ERROR:
File "XXXX", line 5
    print(m)	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:29) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:"))) #x[0] x[1]
i = 0
m = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)

print(m)
-- ERROR:
File "XXXX", line 6
    print(m)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 10:50:56) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:"))) #x[0] x[1]

m = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)

print(m)
-- ERROR:
File "XXXX", line 6
    print(m)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:24:13) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:")))
if(i>=0):
m = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)


-- ERROR:
File "XXXX", line 4
    m = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:24:18) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:")))
if(i>=0):
	m = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)


-- ERROR:
File "XXXX", line 6
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:24:27) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:")))
if(i>=0):
	m = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
	print(m)


-- ERROR:
File "XXXX", line 5
    print(m)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:24:33) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:")))
if(i>=0):
	m = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
print(m)


-- ERROR:
File "XXXX", line 5
    print(m)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:31:09) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:")))
if(i>=0):
	x = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
print(x)


-- ERROR:
File "XXXX", line 5
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:37:23) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:")))
i = 0
if(i>=0):
	i = i + 1
	x = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
print(x)


-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:38:01) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:")))
i = 0

x = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
if(i>0):
	  i = 1 + 1
print(x)


-- ERROR:
File "XXXX", line 6
    if(i>0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:38:06) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:")))
i = 0

x = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
if(i>0):
	  i = 1 + 1
print(i)


-- ERROR:
File "XXXX", line 6
    if(i>0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:38:12) 
-- CODE:
from numpy import*
v = array(eval(input("Entrada:")))
i = 0

x = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
	if(i>0):
	  i = 1 + 1
print(i)


-- ERROR:
File "XXXX", line 6
    if(i>0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:38:35) 
-- CODE:
from numpy import*
from math import*
v = array(eval(input("Entrada:")))
i = 0

x = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
	if(i>0):
	 i = 1 + 1
print(i)


-- ERROR:
File "XXXX", line 7
    if(i>0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 11:38:51) 
-- CODE:
from numpy import*

v = array(eval(input("Entrada:")))
i = 0

x = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)
	if(i>=0):
	 i = 1 + 1
print(i)


-- ERROR:
File "XXXX", line 7
    if(i>=0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-19 19:43:44) 
-- CODE:
from numpy import*

v = array(eval(input("Entrada:")))
v  = (dtype=float)
i = 0

x = (((v[0]**(-1)) + (v[1]**(-1)) + (v[2]**(-1)) + (v[i-1]**(-1))/2)

-- ERROR:
File "XXXX", line 4
    v  = (dtype=float)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
